# judgment_search

./: README.md
.github/: actions.yml
.github/workflows/: ci-dev.yml  release-pr.yml
search_api/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
search_api/src/app/: main.py
search_api/src/app/domain/models/: judgment_dto.py
search_api/src/app/domain/services/: pdf_parser.py  search_service.py  zip_extractor.py
search_api/src/app/infrastructure/qdrant/: qdrant_gateway.py
search_api/src/app/interface/api/routers/: judgment_bulk_router.py  judgment_router.py
search_api/src/app/usecase/: judgment_crud.py  judgment_query.py
search_api/tests/: test_basic.py
