[project]
name = "judgment-search-api"
version = "0.1.0"
description = "判決検索API"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "PyPDF2>=3.0.0",
    "python-multipart>=0.0.6",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
